--- a/1_Respostas/15_I2C_1.md
+++ b/1_Respostas/15_I2C_1.md
@@ -7,3 +7,4 @@ Uma característica bastante interessante deste barramento é a possibilidade de
 Não, pois ele se comporta como escravo e não tem acesso ao clock.
 
 3. Se o Raspberry Pi tiver de se comunicar com dois dispositivos via I2C, como executar a comunicação com o segundo dispositivo?
+Na comunicação I2C os primeiros bits depois do START CONDITION são bits de endereços transmitidos pelo mestre. Após isso enviará um bit de leitura que deverá ser reconhecido pelo escravo sendo em nível baixo, assim iniciando a comunicação com aquele escravo. Após enviar todos os dados o mestre envia um bit de reconhecimento e então vem a condição de stop. 
